--- a/templates/index.html
+++ b/templates/index.html
@@ -227,9 +227,9 @@
                               <span class="portfolio-tag">HTML CSS Bootstrap</span>
                             </li>
                             <li>
-                              Smoking Temperature Control Report <br>
-                              <span class="portfolio-tag">Flask</span>
-                              <span class="portfolio-tag">React.js</span>
+                              E-book <br>
+                              <span class="portfolio-tag">Django</span>
+                              <span class="portfolio-tag">HTML CSS Bootstrap</span>
                             </li>
                             <li>
                                 User Support Trainer <br>
@@ -321,9 +321,9 @@
             </div>
             <div class="portfolio-filter">
                 <div class="filter-item active" data-filter="all">All</div>
-                <div class="filter-item" data-filter="web">Web Application</div>
-                <div class="filter-item" data-filter="iot">IoT</div>
-                <div class="filter-item" data-filter="others">Others</div>
+                <div class="filter-item" data-filter="experience">Work experience</div>
+                <div class="filter-item" data-filter="intern">Internship</div>
+                <div class="filter-item" data-filter="graduation">Graduation project</div>
             </div>
             <div class="row" id="portfolio-items-container">
                 <!-- Portfolio items will be displayed here -->
